[package]
name = "count-digits"
version = "0.1.0"
authors = ["Marvin Löbel <loebel.marvin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.16"
fxhash = "0.2.1"
memmap = "0.7.0"
sha2 = "0.9.1"